Add 'screenoff' alias and button to polybar

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -129,7 +129,7 @@ font-3 = "Wuncon Siji:size=12;2"
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
-modules-left = i3 activity
+modules-left = screenoff i3 activity
 modules-center = date right7
 modules-right = keyboard cpu memory battery alsa pulseaudio-control
 ; network alsa sysmenu
@@ -507,6 +507,15 @@ format = <label>
 label = %{T3}%time%
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/screenoff]
+type = custom/text
+content = "Screen Off"
+content-background = #4000
+content-foreground = #fff
+content-padding = 4
+click-left = "sleep 1; xset dpms force off"
+
 
 [module/activity]
 type = custom/text
