Config: Fix polybar battery module

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -445,8 +445,6 @@ format-padding = 5
 [module/battery]
 type = internal/battery
 
-format-foreground = #ffffffff
-format-background = #aa000000
 format-font = 2
 
 full-at = 99
@@ -456,39 +454,38 @@ battery = BAT1
 adapter = ACAD
 
 poll-interval = 2
-time-format = %H:%M
 
-format-charging-background = #99008855
-format-charging = <animation-charging> <label-charging>
-format-discharging-background = #99008855
-format-discharging = <ramp-capacity> <label-discharging>
-format-full = <ramp-capacity>
+format-charging-background = #4444ff44
+format-charging = <label-charging>
+format-discharging-background = #88992222
+format-discharging = <label-discharging>
+#format-full = <ramp-capacity>
 
-label-charging = BATTERY: %percentage%%
+label-charging = BATTERY: %percentage%% (c)
 label-discharging = BATTERY: %percentage%%
-label-full = BATTERY: %percentage%%
+label-full = BATTERY: full
 
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-ramp-capacity-5 = 
-ramp-capacity-6 = 
-ramp-capacity-7 = 
-ramp-capacity-8 = 
-ramp-capacity-9 = 
+#ramp-capacity-0 = 
+#ramp-capacity-1 = 
+#ramp-capacity-2 = 
+##ramp-capacity-3 = 
+#ramp-capacity-4 = 
+#ramp-capacity-5 = 
+#ramp-capacity-6 = 
+#ramp-capacity-7 = 
+#ramp-capacity-8 = 
+#ramp-capacity-9 = 
 
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
-animation-charging-5 = 
-animation-charging-6 = 
+#animation-charging-0 = 
+#animation-charging-1 = 
+#animation-charging-2 = 
+#animation-charging-3 = 
+#animation-charging-4 = 
+#animation-charging-5 = 
+#animation-charging-6 = 
 
 ; Framerate in milliseconds
-animation-charging-framerate = 750
+#animation-charging-framerate = 750
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
