Config: add hibernate button to polybar

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -129,7 +129,7 @@ font-3 = "Wuncon Siji:size=12;2"
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
-modules-left = screenoff i3 activity
+modules-left = screenoff hibernate i3 activity
 modules-center = date right7
 modules-right = keyboard cpu memory battery alsa pulseaudio-control
 ; network alsa sysmenu
@@ -504,6 +504,14 @@ format = <label>
 label = %{T3}%time%
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/hibernate]
+type = custom/text
+content = "Hibernate"
+content-background = #4400
+content-foreground = #fff
+content-padding = 4
+click-left = "sleep 1; systemctl hibernate"
 
 [module/screenoff]
 type = custom/text
