--- a/.config/i3/config
+++ b/.config/i3/config
@@ -45,7 +45,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id "rofi -show drun -run-command '{cmd}'"
+bindsym $mod+d exec --no-startup-id "rofi -show drun -disable-history -run-command '{cmd}'"
 bindsym $mod+Shift+d exec --no-startup-id "rofi -show run -run-command 'gksudo {cmd}'"
 # bindsym $mod+Shift+d exec --no-startup-id i3-dmenu-desktop
 bindsym $mod+Shift+w exec --no-startup-id "rofi -show window"
