--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -131,7 +131,7 @@ font-3 = "Wuncon Siji:size=12;2"
 
 modules-left = screenoff hibernate i3 activity
 modules-center = date right7
-modules-right = keyboard cpu memory battery alsa pulseaudio-control
+modules-right = keyboard fs-root fs-home cpu memory battery alsa pulseaudio-control
 ; network alsa sysmenu
 
 ; The separator will be inserted between the output of each module
@@ -356,6 +356,7 @@ blue-gray = #546e7a
 [module/volume6]
 type = internal/alsa
 format-volume = <bar-volume>
+format-volume-background = ${colors.amber}
 label-volume = " "
 label-volume-foreground = #dd991100
 label-volume-background = #dd991100
@@ -459,11 +460,11 @@ format-charging-background = #4444ff44
 format-charging = <label-charging>
 format-discharging-background = #88992222
 format-discharging = <label-discharging>
-#format-full = <ramp-capacity>
+format-full-background = #44ff4444
 
-label-charging = BATTERY: %percentage%% (c)
-label-discharging = BATTERY: %percentage%%
-label-full = BATTERY: full
+label-charging = BAT: %percentage%% (c)
+label-discharging = BAT: %percentage%%
+label-full = BAT: full
 
 #ramp-capacity-0 = 
 #ramp-capacity-1 = 
@@ -513,6 +514,8 @@ content-foreground = #fff
 content-padding = 4
 click-left = "sleep 1; systemctl hibernate"
 
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
 [module/screenoff]
 type = custom/text
 content = "Screen Off"
@@ -554,15 +557,6 @@ content = פֿ
 
 click-left = ~/.config/polybar/scripts/gnome-style &
 click-right = ~/.config/polybar/scripts/gnome-style &
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-;;        __________  ______
-;;       / ____/ __ \/ ____/
-;;      / __/ / / / / /_
-;;     / /___/ /_/ / __/
-;;    /_____/\____/_/
-;;
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/keyboard]
 type = internal/xkeyboard
@@ -694,6 +688,8 @@ label-separator-padding = 2
 label-separator-foreground = #ffb52a
 label-separator-background = #66666666
 
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
 [module/cpu]
 type = internal/cpu
 
@@ -726,6 +722,8 @@ ramp-coreload-4 = ▅
 ramp-coreload-5 = ▆
 ramp-coreload-6 = ▇
 ramp-coreload-7 = █
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/memory]
 type = internal/memory
@@ -767,8 +765,12 @@ format-background = #550000ff
 
 label = RAM %percentage_used%%
 
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
 [module/tray]
 type = internal/traybar
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/network]
 type = internal/network
@@ -795,11 +797,15 @@ ramp-signal-3 = "3/3"
 #ramp-signal-font = 7
 ramp-signal-foreground = ${color.fg}
 
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
 [module/backlight]
 type = internal/backlight
 card = intel_backlight
 
 enable-scroll = true
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/pulseaudio-control]
 type = custom/script
@@ -811,11 +817,13 @@ format-background = #44000000
 # You can copy-paste your options for each possible action, which is more
 # trouble-free but repetitive, or apply only the relevant ones (for example
 # --sink-blacklist is only needed for next-sink).
-exec = ~/dotfiles/bin/pulseaudio-control --sink-nickname "alsa_output.pci-0000_00_1f.3.analog-stereo:Speakers" listen
+exec = ~/dotfiles/bin/pulseaudio-control --sink-nickname "alsa_output.pci-0000_00_1f.3.analog-stereo: vol" listen
 click-left = ~/dotfiles/bin/pulseaudio-control togmute
 click-middle = ~/dotfiles/bin/pulseaudio-control --sink-blacklist "alsa_output.pci-0000_01_00.1.hdmi-stereo-extra2" next-sink
 scroll-up = ~/dotfiles/bin/pulseaudio-control --volume-max 130 up
 scroll-down = ~/dotfiles/bin/pulseaudio-control --volume-max 130 down
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/right7]
 type = custom/text
@@ -823,3 +831,49 @@ format-font = font-3
 content-background = #44000000
 content-foreground = #dd0000
 content = %{T3}%{T-}
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[fs-base]
+type = internal/fs
+
+label-mounted = %mountpoint%: %free%
+
+; Mountpoints to display
+; Default: / (new in version 3.7.0)
+#mount-2 = /home/andres/work
+
+; Seconds to sleep between updates
+; Default: 30
+interval = 60
+
+fixed-values = false
+
+; Spacing (number of spaces, pixels, points) between entries
+; Default: 2
+spacing = 1
+
+; Default: 90
+; New in version 3.6.0
+warn-percentage = 75
+
+[module/fs-root]
+inherit = fs-base
+mount-0 = /
+label-mounted = ROOT: %free%
+format-mounted-background = #354b002f
+
+[module/fs-home]
+format-mounted-background = #550ff0f0
+inherit = fs-base
+mount-0 = /home
+label-mounted = HOME: %free%
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+;;        __________  ______
+;;       / ____/ __ \/ ____/
+;;      / __/ / / / / /_
+;;     / /___/ /_/ / __/
+;;    /_____/\____/_/
+;;
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
