--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -17,3 +17,10 @@ dynamic_padding = true
 dynamic_title = true
 # x = 10
 # y = 10
+
+[keyboard]
+bindings = [
+    { key = "L", mods = "Control", chars = "\U0000000c" },
+]
+
+
