--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -636,7 +636,7 @@ format = <label-state> <label-mode>
 ; Default: %mode%
 label-mode = %mode%
 label-mode-padding = 2
-label-mode-background = #ffffff
+label-mode-background = #333333
 
 ; Available tokens:
 ;   %name%
