--- a/.config/i3/config
+++ b/.config/i3/config
@@ -178,6 +178,21 @@ mode "resize" {
         bindsym $mod+r mode "default"
 }
 
+
+set $exit_mode_launcher exit: [l]ogout, [r]eboot, [h]ibernate, [s]leep, [p]oweroff
+bindsym $mod+$ctl+q mode "$exit_mode_launcher"
+
+mode "$exit_mode_launcher" {
+    bindsym l exec "/home/andres/dev/i3-restore/i3-save && i3-msg 'exit'"
+    bindsym r exec "/home/andres/dev/i3-restore/i3-save && systemctl reboot"
+    bindsym h exec systemctl hibernate
+    bindsym s exec systemctl suspend
+    bindsym p exec "/home/andres/dev/i3-restore/i3-save && systemctl poweroff"
+    # Fallback if script fails to save
+    bindsym Return exec i3-msg exit
+    bindsym Escape mode "default"
+}
+
 # Colors?
 client.focused #0E0B27 #0E0B27 #fdf6e3 #859900
 
@@ -187,7 +202,7 @@ bindsym $mod+c exec clipster -sp
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-#bar {        status_command i3status }
+#bar { colors { binding_mode       #2f343a #900000 #ffffff } #    status_command i3status }
 
 workspace_layout tabbed
 
