polybar: remove "bad" characters

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -702,7 +702,7 @@ interval = 1
 ;   <bar-load>
 ;   <ramp-load>
 ;   <ramp-coreload>
-format = <label> <ramp-coreload>
+format = <label>
 
 format-background = #55008800
 ;f Available tokens:
@@ -830,7 +830,7 @@ type = custom/text
 format-font = font-3
 content-background = #44000000
 content-foreground = #dd0000
-content = %{T3}%{T-}
+content = %{T3} %{T-}
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
