add garuda stuff

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,158 +1,177 @@
 {
-  // Basic Bar Layout
-  "layer": "top",
-  "position": "top",
-  "height": 26,
-  "modules-left": [
-    "custom/screenoff",
-    "custom/hibernate",
-    "sway/workspaces",
-    "custom/activity"
-  ],
-  "modules-center": [
-    "clock",
-  ],
-  "modules-right": [
-    "custom/fs-root",
-    "custom/fs-home",
-    "keyboard-state",
-    "cpu",
-    "memory",
-    "battery",
-    "pulseaudio",
-    "tray"
-  ],
+    "layer": "top", // Waybar at top layer
+    "position": "top", // Waybar position (top|bottom|left|right)
+    "height": 40,
+    "width":1900,
+    "margin": "0 0 0 0",
+    "spacing":0,
 
-  // Modules
-  "custom/screenoff": {
-    "format": " Screen Off ",
-    "tooltip": false,
-    "on-click": "sleep 1 && xset dpms force off",
-    "background": "#40000000",
-    "foreground": "#ffffff",
-    "padding": 4
-  },
+    // Choose the order of the modules
+    // Add according to your wishes: "custom/weather"
 
-  "custom/hibernate": {
-    "format": " Hibernate ",
-    "tooltip": false,
-    "on-click": "sleep 1 && systemctl hibernate",
-    "background": "#44000000",
-    "foreground": "#ffffff",
-    "padding": 4
-  },
+    "modules-left": ["custom/launcher", "hyprland/workspaces", "hyprland/window"],
+    "modules-center": ["custom/network_traffic"],
+    "modules-right": ["custom/updates", "backlight", "custom/keyboard-layout", "temperature", "cpu", "memory", "battery", "pulseaudio", "network", "tray", "idle_inhibitor", "clock","custom/power"],
 
-  "custom/activity": {
-    "format": " Apps ",
-    "tooltip": false,
-    "on-click": "~/.config/polybar/scripts/gnome-menu",
-    "on-click-right": "~/.config/polybar/scripts/gnome-menu",
-    "background": "#66000000",
-    "foreground": "#EAEAEA"
-  },
+ // Modules configuration
 
-  "custom/right7": {
-    "format": "%{T3} %{T-}",
-    "tooltip": false,
-    "background": "#44000000",
-    "foreground": "#dd0000"
-  },
-
-  "keyboard-state": {
-      "numlock": false,
-      "capslock": true,
-      "format": "{icon}  ",
-      "format-capslock": "{icon}",
-      "format-icons": {
-          "locked": "🔒",
-          "unlocked": ""
-      },
-      "background": "#774444",
-      "foreground": "#ffffff"
-  },
-
-  "custom/fs-root": {
-    "exec": "df -h / | awk 'NR==2{print \"ROOT: \"$4\"  \"}'",
-    "interval": 60,
-    "tooltip": false,
-    "background": "#354b002f"
-  },
-
-  "custom/fs-home": {
-    "exec": "df -h /home | awk 'NR==2{print \"HOME: \"$4 \"  \"}'",
-    "interval": 60,
-    "tooltip": false,
-    "background": "#550ff0f0"
-  },
-
-  "sway/workspaces": {
-    "format": "{name}",
-    "disable-scroll": true,
-    "all-outputs": false,
-    "format-focused": "<span background=\"#5000ff00\">{name}</span>",
-    "format-visible": "<span background=\"#663f3f3f\">{name}</span>",
-    "format-urgent": "<span background=\"#bd2c40\">{name}</span>",
-    "format-inactive": "<span background=\"#66000000\">{name}</span>",
-    "on-click": "swaymsg workspace {name}"
-  },
-
-  "cpu": {
-    "format": "CPU {usage}%",
-    "interval": 1,
-    "tooltip": false,
-    "background": "#55008800"
-  },
-
-  "memory": {
-    "format": "RAM {percentage}%",
-    "interval": 3,
-    "tooltip": false,
-    "background": "#550000ff"
-  },
-
-  "battery": {
-    "format": "BAT: {capacity}% {icon}",
-    "interval": 10,
-    "tooltip": false,
-    "states": {
-      "good": 80,
-      "warning": 30,
-      "critical": 15
+  "hyprland/workspaces": {
+    "format": "{icon}",
+    "on-click": "activate",
+    "all-outputs": true,
+    "sort-by-number": true,
+    "format-icons": {
+      "1": "1",
+      "2": "2",
+      "3": "3",
+      "4": "4",
+      "5": "5",
+      "6": "6",
+      "7": "7",
+      "8": "8",
+      "9": "9",
+      "10": "10",
+      "focused": "",
+      "default": ""
     },
-    "format-charging": "BAT: {capacity}% (c)",
-    "format-plugged": "BAT: {capacity}% (p)",
-    "format-discharging": "BAT: {capacity}%",
-    "format-full": "BAT: full",
-    "background": "#88992222"
-  },
+    "on-scroll-up": "hyprctl dispatch workspace e+1",
+    "on-scroll-down": "hyprctl dispatch workspace e-1",
+    },
+    "hyprland/window": {
+        "format": "{}",
+	"icon":true,
+	"icon-size" : 20
+    },
+    "idle_inhibitor": {
+        "format": "{icon}",
+       "format-icons": {
+            "activated": "",
+            "deactivated": "",
+        },
+        "on-click":"exec ~/.config/hypr/scripts/idle_inhibitor.sh",
 
-  "pulseaudio": {
-    "format": "VOL: {volume}% {icon}",
-    "format-muted": "MUTED",
-    "tooltip": false,
-    "scroll-step": 5,
-    "on-click": "~/dotfiles/bin/pulseaudio-control togmute",
-    "on-click-middle": "~/dotfiles/bin/pulseaudio-control --sink-blacklist \"alsa_output.pci-0000_01_00.1.hdmi-stereo-extra2\" next-sink",
-    "on-scroll-up": "~/dotfiles/bin/pulseaudio-control --volume-max 130 up",
-    "on-scroll-down": "~/dotfiles/bin/pulseaudio-control --volume-max 130 down",
-    "background": "#44000000"
-  },
-
-  "clock": {
-    "interval": 1,
-    "format": "{:%F - %I:%M:%S %p}",
-    "tooltip": false,
-    "format-alt": "{:%a %b %d, %I:%M %p}",
-    "background": "#aa000000",
-    "foreground": "#ffffffff"
-  },
-
-  "tray": {
-    "spacing": 10,
-    "background": "#66444444",
-    "foreground": "#ffffff"
-  },
-
-  // Styling
-  "style": "~/.config/waybar/style.css"
-}
+    },
+    "tray": {
+        "icon-size": 20,
+        "spacing": 5
+    },
+    "clock": {
+        "tooltip-format": "<big>{:%A, %d.%B %Y }</big>\n<tt><small>{calendar}</small></tt>",
+        "format": " {:%a %d %b  %I:%M %p}",	//12 hour format
+        //"format": " {:%a %d %b  %H:%M}",	//24 hour format
+        "format-alt": " {:%d/%m/%Y  %H:%M:%S}",
+        //"max-length": 200
+        "interval": 1,
+        "on-click": "~/.config/waybar/scripts/OCV",
+    },
+    "cpu": {
+        "format": "🖳{usage}%",
+        "on-click": "foot -e htop"
+    },
+    "memory": {
+        "format": "🖴 {: >3}%",
+        "on-click": "foot -e htop"
+    },
+    "temperature": {
+        "thermal-zone": 7,  // Check with: # cat /sys/class/hwmon/hwmon*/temp1_input
+        "hwmon-path": "/sys/class/hwmon/hwmon7/temp1_input",
+        "critical-threshold": 80,
+        "format-critical": "{temperatureC}°C ",
+        "format": "{temperatureC}°C "
+    },
+    "backlight": {
+        // "device": "acpi_video1",
+        "format": "{icon} {percent: >3}%",
+        "format-icons": ["", ""],
+        "on-scroll-down": "brightnessctl -c backlight set 1%-",
+        "on-scroll-up": "brightnessctl -c backlight set +1%",
+        "on-click": "~/.config/waybar/scripts/backlight-hint.sh"
+    },
+    "battery": {
+        "states": {
+            // "good": 95,
+            "warning": 30,
+            "critical": 15
+        },
+        "format": "{icon} {capacity: >3}%",
+        "format-icons": ["", "", "", "", ""]
+        // "format-good": "", // An empty format will hide the module
+        // "format-full": "",
+        //"format-icons": ["", "", "", "", "", "", "", "", "", ""]
+        //"format": "&#x202b;{icon}&#x202c; {capacity}%",
+        //"format-icons": ["ﱉ","ﱊ","ﱌ","ﱍ","ﱋ"]
+    },
+      "network": {
+        //"interface": "wlp0s20f3", // (Optional) To force the use of this interface  "format-wifi": "  {essid}",
+        "format": "⚠Disabled",
+        "format-wifi": "",
+        "format-ethernet": "",
+        "format-linked": "{ifname} (No IP)",
+        "format-disconnected": "⚠Disabled",
+        "format-alt": "{ifname}: {ipaddr}/{cidr}",
+        "family": "ipv4",
+        "tooltip-format-wifi": "  {ifname} @ {essid}\nIP: {ipaddr}\nStrength: {signalStrength}%\nFreq: {frequency}MHz\nUp: {bandwidthUpBits} Down: {bandwidthDownBits}",
+        "tooltip-format-ethernet": " {ifname}\nIP: {ipaddr}\n up: {bandwidthUpBits} down: {bandwidthDownBits}",
+        //"min-length": 2,
+        //"max-length": 2,
+        "on-click": "nm-connection-editor"
+    },
+   "custom/updates": {
+       "format": "{} {icon}",
+       "return-type": "json",
+       "format-icons": {
+           "has-updates": "󱍷",
+           "updated": "󰂪",
+       },
+       "exec-if": "which waybar-module-pacman-updates",
+       "exec": "waybar-module-pacman-updates --interval-seconds 5 --network-interval-seconds 7200 --network-interval-seconds",
+       "on-click": "foot -e update"
+   },
+    "custom/power": {
+      	"format":"⏻",
+       	"on-click": "nwgbar",
+      	"tooltip": false,
+   },
+   "custom/keyboard-layout": {
+      	"format": " Cheat", // Icon: keyboard
+        "on-click": "~/.config/waybar/scripts/keyhint.sh",
+     },
+    "custom/launcher": {
+    "format":"    ",
+    	"on-click": "exec nwg-drawer -c 7 -is 70 -spacing 23",
+    	"tooltip": false,
+     },
+     "custom/network_traffic": {
+             "exec": "~/.config/waybar/scripts/network_traffic.sh",
+             "return-type": "json",
+             "format-ethernet": "{icon} {ifname} ⇣{bandwidthDownBytes} ⇡{bandwidthUpBytes}",    // optional
+},
+    "pulseaudio": {
+        "scroll-step": 3, // %, can be a float
+        "format": "{icon} {volume}% {format_source}",
+        "format-bluetooth": "{volume}% {icon} {format_source}",
+        "format-bluetooth-muted": " {icon} {format_source}",
+        "format-muted": " {format_source}",
+        //"format-source": "{volume}% ",
+        //"format-source-muted": "",
+        "format-source": "",
+        "format-source-muted": "",
+        "format-icons": {
+            "headphone": "",
+            "hands-free": "",
+            "headset": "",
+            "phone": "",
+            "portable": "",
+            "car": "",
+            "default": ["", "", ""]
+        },
+        "on-click": "footclient -T waybar_alsamixer -e alsamixer -M",
+        "on-click-right": "pavucontrol"
+        },
+        // https://github.com/chubin/wttr.in
+        "custom/weather": {
+        "exec": "curl 'https://wttr.in/Essen?format=2'",
+        "interval": 900,
+	    "on-click": "yad --html --uri='https://wttr.in/Essen' --center --fixed --width=1000 --height=680 --timeout=60 --timeout-indicator=right"
+        },
+    }
