more hyprland/fish/waybar configs

--- a/.config/hypr/settings/manual_settings.conf
+++ b/.config/hypr/settings/manual_settings.conf
@@ -153,10 +153,6 @@ exec-once =/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 #
 exec-once = foot --server
 
-exec-once = workspace 3, brave
-exec-once = workspace 2, footclient
-exec-once = workspace 1, trillian
-
 #pre executions (under development)
 exec-once=exec xrdb -load ~/.Xresources
 
@@ -190,7 +186,7 @@ bind = $mainMod, 36, exec, footclient
 bind = $mainMod SHIFT, Q, killactive,
 bind = $mainMod SHIFT, E, exec, nwgbar
 bind = $mainMod, N, exec, thunar
-bind = $mainMod SHIFT, 65, togglefloating,
+bind = $mainMod, Y, togglefloating,
 bindr= SUPER, SUPER_L, exec, pkill wofi || wofi --normal-window --show drun --allow-images
 bind = $mainMod SHIFT, D, exec, nwg-drawer -mb 10 -mr 10 -ml 10 -mt 10
 bind = $mainMod, P, pseudo, # dwindle
@@ -398,3 +394,16 @@ bind = $mainMod SHIFT, S, togglespecialworkspace, magic
 windowrule = workspace 1, class:^(trillian)$
 windowrule = workspace 3, class:^(footclient)$
 windowrule = workspace 2, class:^(Brave-browser)$
+windowrule = float,class:^(sleek)
+windowrule = workspace 9, class:^(sleek)$
+windowrule = size, class:^(sleek)$ 800 600$
+#windowrule = pos, class:^(sleek)$ 1200 100
+
+windowrulev2 = tile, class:^(trillian)$, title:^(Contact List)$, move 0 0, size 350 1080
+
+exec-once = [silent] bash -c "sleep 0.2; trillian > ~/trillian.txt 2>&1" &
+exec-once = [silent] bash -c "sleep 0.6; footclient > ~/footclient.txt 2>&1" &
+exec-once = [silent] bash -c "sleep 0.8; sleek > ~/sleek.txt 2>&1" &
+exec-once = [silent] bash -c "sleep 1; brave > ~/brave.txt 2>&1" &
+
+workspace = 1, layout=dwindle
