hyprland: remove debug files for custom startup commands

--- a/.config/hypr/settings/manual_settings.conf
+++ b/.config/hypr/settings/manual_settings.conf
@@ -401,9 +401,9 @@ windowrule = size, class:^(sleek)$ 800 600$
 
 windowrulev2 = tile, class:^(trillian)$, title:^(Contact List)$, move 0 0, size 350 1080
 
-exec-once = [silent] bash -c "sleep 0.2; trillian > ~/trillian.txt 2>&1" &
-exec-once = [silent] bash -c "sleep 0.6; footclient > ~/footclient.txt 2>&1" &
-exec-once = [silent] bash -c "sleep 0.8; sleek > ~/sleek.txt 2>&1" &
-exec-once = [silent] bash -c "sleep 1; brave > ~/brave.txt 2>&1" &
+exec-once = [silent] bash -c "sleep 0.2; trillian" &
+exec-once = [silent] bash -c "sleep 0.6; footclient" &
+exec-once = [silent] bash -c "sleep 0.8; sleek" &
+exec-once = [silent] bash -c "sleep 1; brave" &
 
 workspace = 1, layout=dwindle
