--- a/.config/hypr/settings/manual_settings.conf
+++ b/.config/hypr/settings/manual_settings.conf
@@ -394,10 +394,9 @@ bind = $mainMod SHIFT, S, togglespecialworkspace, magic
 windowrule = workspace 1, class:^(trillian)$
 windowrule = workspace 3, class:^(footclient)$
 windowrule = workspace 2, class:^(Brave-browser)$
+windowrule = workspace 9, class:^(steam)$
 windowrule = float,class:^(sleek)
-windowrule = workspace 9, class:^(sleek)$
 windowrule = size, class:^(sleek)$ 800 600$
-#windowrule = pos, class:^(sleek)$ 1200 100
 
 windowrulev2 = tile, class:^(trillian)$, title:^(Contact List)$, move 0 0, size 350 1080
 
