hyprland: add zim shortcut (mod+z)

--- a/.config/hypr/settings/manual_settings.conf
+++ b/.config/hypr/settings/manual_settings.conf
@@ -191,6 +191,7 @@ bindr= SUPER, SUPER_L, exec, pkill wofi || wofi --normal-window --show drun --al
 bind = $mainMod SHIFT, D, exec, nwg-drawer -mb 10 -mr 10 -ml 10 -mt 10
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod SHIFT, P, togglesplit, # dwindle
+bind = $mainMod, Z, exec, /usr/bin/python /usr/bin/zim
 
 # Mainmod + Function keys
 bind = $mainMod, F1, exec, firedragon
@@ -397,6 +398,8 @@ windowrule = workspace 2, class:^(Brave-browser)$
 windowrule = workspace 9, class:^(steam)$
 windowrule = float,class:^(sleek)
 windowrule = size, class:^(sleek)$ 800 600$
+windowrule = float,class:^(zim)
+windowrule = size, class:^(zim)$ 800 600$
 
 windowrulev2 = tile, class:^(trillian)$, title:^(Contact List)$, move 0 0, size 350 1080
 
