.config: phpbrew and hyprland mouse tweaks

--- a/.config/hypr/settings/manual_settings.conf
+++ b/.config/hypr/settings/manual_settings.conf
@@ -10,7 +10,7 @@ $mainMod = SUPER
 # ##################################################
 
 input {
-kb_layout = us
+    kb_layout = us
     kb_variant =
     kb_model =
     kb_options =
@@ -18,20 +18,20 @@ kb_layout = us
     numlock_by_default= true
     follow_mouse = 1
 
-# ####################################################
-# ##  _____                _                     _  ##
-# ## |_   _|__  _   _  ___| |__  _ __   __ _  __| | ##
-# ##   | |/ _ \| | | |/ __| '_ \| '_ \ / _` |/ _` | ##
-# ##   | | (_) | |_| | (__| | | | |_) | (_| | (_| | ##
-# ##   |_|\___/ \__,_|\___|_| |_| .__/ \__,_|\__,_| ##
-# ##                            |_|                 ##
-# ####################################################
+    # ####################################################
+    # ##  _____                _                     _  ##
+    # ## |_   _|__  _   _  ___| |__  _ __   __ _  __| | ##
+    # ##   | |/ _ \| | | |/ __| '_ \| '_ \ / _` |/ _` | ##
+    # ##   | | (_) | |_| | (__| | | | |_) | (_| | (_| | ##
+    # ##   |_|\___/ \__,_|\___|_| |_| .__/ \__,_|\__,_| ##
+    # ##                            |_|                 ##
+    # ####################################################
 
-touchpad {
-    natural_scroll = false
-    tap-to-click = true
-    disable_while_typing = true
-}
+    touchpad {
+        natural_scroll = false
+        tap-to-click = true
+        disable_while_typing = true
+    }
 
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
@@ -364,9 +364,14 @@ misc {
 }
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-# device:epic mouse V1 {
-#     sensitivity = -0.5
-# }
+device {
+    name = "yichip-wireless-device-consumer-control-1",
+    sensitivity = 1.0
+}
+device {
+    name = "yichip-wireless-device-mouse",
+    sensitivity = 1.0
+}
 
 # Performance Tweaks (For less power consumption without sacrificing performance)
 # See : https://wiki.hyprland.org/Configuring/Performance/
