--- a/.config/hypr/settings/manual_settings.conf
+++ b/.config/hypr/settings/manual_settings.conf
@@ -254,13 +254,12 @@ bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
 bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+bind = $mainMod, bracketleft, workspace, e-1
+bind = $mainMod, bracketright, workspace, e+1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
-
 
 # set volume (laptops only and may or may not work on PCs)
 bind = ,122, exec, pamixer --decrease 5; notify-send " Volume: "$(pamixer --get-volume) -t 500
@@ -361,7 +360,9 @@ exec-once = hypridle
 
 misc {
 	disable_hyprland_logo = true
+    font_family = "JetBrains Mono"
 }
+
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
 device {
@@ -401,8 +402,6 @@ windowrule = workspace 1, class:^(trillian)$
 windowrule = workspace 3, class:^(footclient)$
 windowrule = workspace 2, class:^(Brave-browser)$
 windowrule = workspace 9, class:^(steam)$
-windowrule = float,class:^(sleek)
-windowrule = size, class:^(sleek)$ 800 600$
 windowrule = float,class:^(zim)
 windowrule = size, class:^(zim)$ 800 600$
 
@@ -410,7 +409,31 @@ windowrulev2 = tile, class:^(trillian)$, title:^(Contact List)$, move 0 0, size 
 
 exec-once = [silent] bash -c "sleep 0.2; trillian" &
 exec-once = [silent] bash -c "sleep 0.6; footclient" &
-exec-once = [silent] bash -c "sleep 0.8; sleek" &
 exec-once = [silent] bash -c "sleep 1; brave" &
 
 workspace = 1, layout=dwindle
+
+# Run the script when starting (optionally customize for manual call too)
+windowrulev2 = group set always lock invade, class:^(footclient)$
+bind = $mainMod, apostrophe, changegroupactive, b
+bind = $mainMod, semicolon, changegroupactive, f
+
+group:groupbar {
+	enabled = true
+    gradients = 1
+    render_titles = 1
+    font_size = 16
+    font_family = "JetBrains Mono"
+    font_weight_active = bold
+    font_weight_inactive = normal
+    height = 25
+    col.locked_active = 0x66638aff
+    col.locked_inactive = 0x33638aff
+    gaps_in = 5
+    gradient_rounding = 10
+    indicator_height = 0
+    indicator_gap = 5
+}
+
+
+
