.config: change wofi to SUPER+D in hyprland

--- a/.config/hypr/settings/manual_settings.conf
+++ b/.config/hypr/settings/manual_settings.conf
@@ -187,7 +187,7 @@ bind = $mainMod SHIFT, Q, killactive,
 bind = $mainMod SHIFT, E, exec, nwgbar
 bind = $mainMod, N, exec, thunar
 bind = $mainMod, Y, togglefloating,
-bindr= SUPER, SUPER_L, exec, pkill wofi || wofi --normal-window --show drun --allow-images
+bindr= SUPER, D, exec, pkill wofi || wofi --normal-window --show drun --allow-images
 bind = $mainMod SHIFT, D, exec, nwg-drawer -mb 10 -mr 10 -ml 10 -mt 10
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod SHIFT, P, togglesplit, # dwindle
