.config: black lockscreen, waybar:workspace/hyprland:group color, fix group keys

--- a/.config/hypr/settings/manual_settings.conf
+++ b/.config/hypr/settings/manual_settings.conf
@@ -415,8 +415,8 @@ workspace = 1, layout=dwindle
 
 # Run the script when starting (optionally customize for manual call too)
 windowrulev2 = group set always lock invade, class:^(footclient)$
-bind = $mainMod, apostrophe, changegroupactive, b
-bind = $mainMod, semicolon, changegroupactive, f
+bind = $mainMod, apostrophe, changegroupactive, f
+bind = $mainMod, semicolon, changegroupactive, b
 
 group:groupbar {
 	enabled = true
@@ -427,8 +427,8 @@ group:groupbar {
     font_weight_active = bold
     font_weight_inactive = normal
     height = 25
-    col.locked_active = 0x66638aff
-    col.locked_inactive = 0x33638aff
+    col.locked_active = 0x99638aff
+    col.locked_inactive = 0x22638aff
     gaps_in = 5
     gradient_rounding = 10
     indicator_height = 0
