.config: stop auto-starting trillian (until ios notifications are fixed/back)

--- a/.config/hypr/settings/manual_settings.conf
+++ b/.config/hypr/settings/manual_settings.conf
@@ -407,7 +407,7 @@ windowrule = size, class:^(zim)$ 800 600$
 
 windowrulev2 = tile, class:^(trillian)$, title:^(Contact List)$, move 0 0, size 350 1080
 
-exec-once = [silent] bash -c "sleep 0.2; trillian" &
+# exec-once = [silent] bash -c "sleep 0.2; trillian" &
 exec-once = [silent] bash -c "sleep 0.6; footclient" &
 exec-once = [silent] bash -c "sleep 1; brave" &
 
