.config: add move window within group SUPER+SHIFT+{;'} shortcut

--- a/.config/hypr/settings/manual_settings.conf
+++ b/.config/hypr/settings/manual_settings.conf
@@ -417,6 +417,8 @@ workspace = 1, layout=dwindle
 windowrulev2 = group set always lock invade, class:^(footclient)$
 bind = $mainMod, apostrophe, changegroupactive, f
 bind = $mainMod, semicolon, changegroupactive, b
+bind = $mainMod SHIFT, apostrophe, movegroupwindow, f
+bind = $mainMod SHIFT, semicolon, movegroupwindow, b
 
 group:groupbar {
 	enabled = true
