--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -1,14 +1,14 @@
 general {
-    after_sleep_cmd = hyprctl dispatch dpms on  # to avoid having to press a key twice to turn on the display.
+    after_sleep_cmd = hyprctl dispatch dpms on # screen on after sleep 
 }
 
+# turn off screen and keyboard backlight after 2.5 minutes of inactivity
 listener {
     timeout = 150                                # 2.5min.
     on-timeout = brightnessctl -s set 10         # set monitor backlight to minimum, avoid 0 on OLED monitor.
     on-resume = brightnessctl -r                 # monitor backlight restore.
 }
 
-# turn off keyboard backlight, comment out this section if you dont have a keyboard backlight.
 listener {
     timeout = 150                                          # 2.5min.
     on-timeout = brightnessctl -sd rgb:kbd_backlight set 0 # turn off keyboard backlight.
@@ -16,7 +16,26 @@ listener {
 }
 
 listener {
-    timeout = 330                                 # 5.5min
+    timeout = 300                                 # 5min.
     on-timeout = hyprctl dispatch dpms off        # screen off when timeout has passed
     on-resume = hyprctl dispatch dpms on          # screen on when activity is detected after timeout has fired.
 }
+
+# -------------------------------
+# Hybrid Sleep after 10 minutes
+# -------------------------------
+listener {
+    timeout = 600                            # 10min.
+    on-timeout = loginctl lock-session && systemctl hybrid-sleep
+    # optional: ignore_inhibit = false       # respects systemd inhibitors
+}
+
+# -------------------------------
+# Hibernate after 60 minutes
+# -------------------------------
+listener {
+    timeout = 3600                           # 60min.
+    on-timeout = loginctl lock-session && systemctl hibernate
+    # optional: ignore_inhibit = false       # respects systemd inhibitors
+}
+
